新增选项卡

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -53,4 +53,6 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ComboBoxItemStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/NumericUpDownStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/SwitchButtonStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TabControlStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TabItemStyle.axaml" />
 </Styles>
