完成滑块控件

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -55,4 +55,5 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/SwitchButtonStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TabControlStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TabItemStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/SliderStyle.axaml" />
 </Styles>
