完成数据表格样式美化以及序号转换器功能

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -56,4 +56,7 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TabControlStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TabItemStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/SliderStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/RateItemsControlStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/RateItemStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DataGridStyle.axaml" />
 </Styles>
