--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CheckBoxStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CheckBoxStyle.axaml
@@ -131,6 +131,7 @@
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Default]:indeterminate /template/ Path#PART_Path">
         <Setter Property="Data" Value="M63.6 489.6h896.7v44.8H63.6z" />
+        <Setter Property="Margin" Value="4 0" />
         <Setter Property="Height" Value="1" />
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Default]:disabled /template/ Border#PART_Border">
