--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TreeViewItemStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TreeViewItemStyle.axaml
@@ -5,15 +5,20 @@
     xmlns:lay="clr-namespace:LayUI.Avalonia.Controls">
     <Design.PreviewWith>
         <Border MinWidth="300" Padding="20">
-            <lay:LayTreeView>
+            <lay:LayTreeView IsCheckBoxVisible="True">
                 <lay:LayTreeViewItem Header="Level 1" IsExpanded="True">
                     <lay:LayTreeViewItem
                         Header="Level 2.1"
                         IsExpanded="True"
                         IsSelected="True">
                         <lay:LayTreeViewItem Header="Level 3.1" />
-                        <lay:LayTreeViewItem Header="Level 3.2" IsSelected="True">
-                            <lay:LayTreeViewItem Header="Level 4" />
+                        <lay:LayTreeViewItem
+                            Header="Level 3.2"
+                            IsExpanded="True"
+                            IsSelected="True">
+                            <lay:LayTreeViewItem Header="Level 4.1" />
+                            <lay:LayTreeViewItem Header="Level 4.2" />
+                            <lay:LayTreeViewItem Header="Level 4.3" />
                         </lay:LayTreeViewItem>
                     </lay:LayTreeViewItem>
                     <lay:LayTreeViewItem Header="Level 2.2" IsEnabled="False" />
@@ -49,7 +54,7 @@
                         Text="&#xee2f;">
                         <TextBlock.Transitions>
                             <Transitions>
-                                <TransformOperationsTransition Property="RenderTransform" Duration="0:0:0.2" />
+                                <TransformOperationsTransition Property="RenderTransform" Duration="0:0:0.1" />
                             </Transitions>
                         </TextBlock.Transitions>
                     </TextBlock>
@@ -59,7 +64,7 @@
     </Style>
     <Style Selector="lay|LayTreeViewItem">
         <Setter Property="Margin" Value="0" />
-        <Setter Property="Padding" Value="0 1" />
+        <Setter Property="IsChecked" Value="false" />
         <Setter Property="IsCheckBoxVisible" Value="{Binding RelativeSource={RelativeSource AncestorType=lay:LayTreeView}, Path=IsCheckBoxVisible, Mode=OneWay}" />
         <Setter Property="Template">
             <ControlTemplate>
@@ -67,7 +72,7 @@
                     <Border
                         Name="PART_LayoutRoot"
                         MinHeight="{TemplateBinding MinHeight}"
-                        Margin="0"
+                        Margin="0,2"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
@@ -90,8 +95,7 @@
                                 Grid.Column="1"
                                 Margin="0"
                                 Padding="0"
-                                IsChecked="{TemplateBinding IsChecked,
-                                                            Mode=TwoWay}"
+                                IsChecked="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsChecked, Mode=TwoWay}"
                                 IsVisible="{TemplateBinding IsCheckBoxVisible}" />
                             <ContentPresenter
                                 Name="PART_HeaderPresenter"
@@ -105,10 +109,7 @@
                                 Focusable="False" />
                         </Grid>
                     </Border>
-                    <ItemsPresenter
-                        Name="PART_ItemsPresenter"
-                        IsVisible="{TemplateBinding IsExpanded}"
-                        ItemsPanel="{TemplateBinding ItemsPanel}" />
+                    <ItemsPresenter Name="PART_ItemsPresenter" ItemsPanel="{TemplateBinding ItemsPanel}" />
                 </StackPanel>
             </ControlTemplate>
         </Setter>
@@ -116,8 +117,18 @@
     <Style Selector="lay|LayTreeViewItem /template/ lay|LaySpecialToggleButton#PART_ExpandCollapseChevron:checked /template/ TextBlock#PART_Icon">
         <Setter Property="RenderTransform" Value="rotate(90deg)" />
     </Style>
+    <Style Selector="lay|LayTreeViewItem[IsExpanded=false] /template/ ItemsPresenter#PART_ItemsPresenter">
+        <Setter Property="Height" Value="0" />
+        <Setter Property="Opacity" Value="0" />
+    </Style>
     <Style Selector="lay|LayTreeViewItem:empty /template/ lay|LaySpecialToggleButton#PART_ExpandCollapseChevron">
-        <Setter Property="IsVisible" Value="False" />
+        <Setter Property="IsVisible" Value="false" />
+    </Style>
+    <Style Selector="lay|LayTreeViewItem /template/Grid#PART_Header:pointerover">
+        <Setter Property="Opacity" Value="0.7" />
+    </Style>
+    <Style Selector="lay|LayTreeViewItem[IsEnabled=false]">
+        <Setter Property="Opacity" Value="0.6" />
     </Style>
     <!--  Add Styles Here  -->
 </Styles>
